--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Blog
-email: email@domain.com
+#email: email@domain.com
 description: >- # this means to ignore newlines until "baseurl:"
   My IT Setup
 domain: "struthio.github.io"
@@ -29,7 +29,8 @@ url: "/blog" # the base hostname & protocol for your site, e.g. http://example.c
 github_username:  struthio
 
 # Build settings
-theme: minima
+#theme: minima
+remote_theme: jekyll/minima 
 plugins:
   - jekyll-feed
 
