--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ title: Blog
 description: >- # this means to ignore newlines until "baseurl:"
   My IT Setup
 domain: "struthio.github.io"
-baseurl: "https://struthio.github.io/" # the subpath of your site, e.g. /blog
-url: "/blog" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://struthio.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  struthio
 
