--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
+timezone: "Europe/Warsaw"
+
 title: Blog
 #email: email@domain.com
 description: >- # this means to ignore newlines until "baseurl:"
