Allow future dates

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://struthio.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  struthio
+future: true
 
 # Build settings
 #theme: minima
